--- a/css/sass/woocommerce.scss
+++ b/css/sass/woocommerce.scss
@@ -115,6 +115,24 @@ table.variations{
 
 .wcsc-cart-add-form{
 
+    table.group_table{
+        width:95%;
+        max-width:400px;
+        margin: 20px auto;
+        td{
+            padding:5px;
+            white-space:normal;
+        }
+        td.label{
+            display:table-cell;
+            vertical-align:middle;
+            text-align:left;
+            label{
+                margin-bottom:0;
+                font-size:20px;
+            }
+        }
+    }
 
     .quantity-wrapper{
         padding:10px;
@@ -132,6 +150,7 @@ table.variations{
     .input-text{
         width:100%;
         max-width:75px;
+        min-width:50px;
         height:39px;
         padding:6px 12px;
         font-size:16px;
@@ -158,7 +177,7 @@ table.variations{
     a{
         text-decoration:underline;
     }
-    &::after{
+    &:after{
         content:".";
         visibility:hidden;
         clear:both;
@@ -348,6 +367,9 @@ table.variations{
     }
     .wcsc-cart-add-form{
         margin:20px 0;
+        table.group_table{
+            margin:20px 0;
+        }
         .quantity-wrapper{
             max-width:initial;
             margin:initial;
@@ -357,7 +379,7 @@ table.variations{
             padding: 15px 12px 17px;
         }
         .input-text{
-            max-width:400px;
+            max-width:100px;
         }
     }
     .related.products, .upsells.products{
@@ -388,5 +410,13 @@ table.variations{
     .woocommerce-product-gallery{
         float:left;
         margin: 0 25px 25px 0;
+    }
+}
+
+@media screen and (min-width:1200px){
+    .wcsc-cart-add-form{
+        table.group_table{
+            max-width:600px;
+        }
     }
 }
