single page content and styles (w/o sidebar)

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -9,7 +9,7 @@
  * 
  * **********************/
 body{
-    font-family:"Garamond","Times New Roman", serif, sans-serif;
+    font-family:"Trebuchet MS","Garamond","Times New Roman", serif, sans-serif;
     font-size:18px;
     font-variant: small-caps;
 }
@@ -27,8 +27,7 @@ body{
     width:95%;
 }
 
-.sewchic-all-caps{
-}
+
 /************************
  * HEADER STYLES
  * LOGO AND NAV MENU
