--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -427,4 +427,42 @@ table.variations {
       margin-bottom: 0;
       border-bottom: none; }
 
+@media screen and (min-width: 768px) {
+  .woocommerce-products-header, .woocommerce-result-count {
+    text-align: initial; }
+
+  .wcsc-shop-loop .orderby {
+    max-width: 200px; }
+  .wcsc-shop-loop ul.products {
+    margin: 10px -10px; }
+    .wcsc-shop-loop ul.products li {
+      display: inline-block;
+      width: 45%;
+      max-width: 496px;
+      margin: 0 2%;
+      border: none; }
+      .wcsc-shop-loop ul.products li a {
+        position: relative; }
+      .wcsc-shop-loop ul.products li h2 {
+        position: absolute;
+        bottom: 35px;
+        right: 10px;
+        padding: 5px;
+        background: white;
+        opacity: 0.7;
+        font-size: 18px;
+        margin: 0;
+        text-align: right;
+        max-width: 260px; } }
+@media screen and (min-width: 992px) {
+  .wcsc-shop-loop ul.products li {
+    width: 30.9%;
+    margin: 0 1%;
+    max-width: 340px; } }
+@media screen and (min-width: 1200px) {
+  .wcsc-shop-loop ul.products li {
+    width: 22.6%;
+    margin: 0 1%;
+    max-width: initial; } }
+
 /*# sourceMappingURL=woocommerce.css.map */
